--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -61,5 +61,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.0.1'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    compile 'com.google.firebase:firebase-core:9.0.2'
+    compile 'com.google.firebase:firebase-auth:9.0.2'
 }
 apply plugin: 'com.google.gms.google-services'
